@@ -9,22 +9,27 @@ module Formtastic
   #
   # @todo Test with Rails 3.0
   class InstallGenerator < Rails::Generators::Base
-    
     source_root File.expand_path('../../../templates', __FILE__)
-    
+    class_option :template_engine
+
     if ::Rails::VERSION::MAJOR == 3 && ::Rails::VERSION::MINOR >= 1
-      # Rails 3.1.x has the asset pipeline, no need to copy CSS files any more
+      # Rails 3.1 has the asset pipeline, no need to copy CSS files any more
       desc "Copies a config initializer to config/initializers/formtastic.rb"
       def copy_files
-        template 'formtastic.rb', 'config/initializers/formtastic.rb'
+        copy_file 'formtastic.rb', 'config/initializers/formtastic.rb'
       end
     else
       # Rails 3.0 doesn't have an asset pipeline, so we copy in CSS too
       desc "Copies formtastic.css to public/stylesheets/ and a config initializer to config/initializers/formtastic.rb"
       def copy_files
-        template 'formtastic.rb', 'config/initializers/formtastic.rb'
-        template '../../../app/assets/stylesheets/formtastic.css', 'public/stylesheets/formtastic.css'
+        copy_file 'formtastic.rb', 'config/initializers/formtastic.rb'
+        copy_file '../../../app/assets/stylesheets/formtastic.css', 'public/stylesheets/formtastic.css'
       end
+    end
+
+    def copy_scaffold_template
+      engine = options[:template_engine]
+      copy_file "_form.html.#{engine}", "lib/templates/#{engine}/scaffold/_form.html.#{engine}"
     end
   end
 end
