@@ -1,7 +1,11 @@
-<%%= semantic_form_for @<%= name.underscore %> do |f| %>
+<%%= semantic_form_for @<%= singular_name %> do |f| %>
   <%%= f.inputs do %>
-  <% @attributes.each do |attribute| -%>
-    <%%= f.input :<%= attribute %> %>
-  <% end -%>
+  <%- attributes.each do |attribute| -%>
+    <%%= f.input :<%= attribute.name %> %>
+  <%- end -%>
+  <%% end %>
+
+  <%%= f.buttons do %>
+    <%%= f.commit_button %>
   <%% end %>
 <%% end %>
